Day 13 refactoring